# DocGraph-

./: .gitignore  CONTRIBUTING.md  DECISIONS.md  README.md  package.json  pnpm-lock.yaml
apps/sidecar/: app.py  pyproject.toml
apps/sidecar/docgraph_sidecar/: api.py  logging.py  responses.py  settings_store.py
apps/sidecar/docgraph_sidecar/core/: __init__.py  db.py  entities.py  entity_extractor.py  file_actions.py  files.py  profile_builder.py  profiles.py  relations.py  scan_jobs.py  snapshots.py  tasks.py
apps/sidecar/docgraph_sidecar/indexer/: __init__.py  fts.py
apps/sidecar/docgraph_sidecar/migrations/: 001_init.sql  002_v4_schema.sql  003_task_queue_contract.sql  004_scan_jobs.sql  005_profile_strategy_data.sql  __init__.py
apps/sidecar/docgraph_sidecar/parser/: __init__.py  base.py  docx.py  errors.py  pdf.py  pptx.py  registry.py  structure_chunker.py  text.py  xlsx.py
apps/sidecar/docgraph_sidecar/retrieval/: __init__.py  fts_search.py
apps/sidecar/tests/: test_db.py  test_docx_parser.py  test_entities_api.py  test_entity_extractor.py  test_file_actions_api.py  test_file_detail_api.py  test_files_api.py  test_files_catalog.py  test_fixtures.py  test_fts_indexer.py  test_ignore_rules.py  test_metadata_scanner.py  test_parse_worker.py  test_parser_registry.py  test_pdf_parser.py  test_pptx_parser.py  test_profile_api.py  test_profile_builder.py  test_relations_api.py  test_scan_api.py  test_scan_jobs.py  test_search_api.py  test_skeleton.py  test_structure_chunker.py  test_tasks.py  test_text_parser.py  test_xlsx_parser.py
docs/: README.md  (+1 more)
(+38 files in other folders)
