[project]
name = "docgraph-sidecar"
version = "0.0.0"
description = "Local sidecar service for DocGraph V4."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openpyxl>=3.1.0",
  "pymupdf>=1.24.0",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
